# backend-go/docs/swagger.yaml
@@ -2,7 +2,7 @@ definitions:
   auditoriummodel.Auditorium:
     properties:
       cinema:
-        $ref: '#/definitions/common.Cinema'
+        $ref: '#/definitions/common.SimpleCinema'
       created_at:
         type: string
       id:
@@ -41,8 +41,6 @@ definitions:
         type: string
       owner:
         $ref: '#/definitions/common.SimpleUser'
-      owner_id:
-        type: integer
       phone_number:
         type: string
       status:
@@ -63,26 +61,18 @@ definitions:
       phone_number:
         type: string
     type: object
-  common.Cinema:
+  common.Auditorium:
     properties:
-      address:
-        type: string
-      capacity:
-        type: integer
+      cinema:
+        $ref: '#/definitions/common.SimpleCinema'
       created_at:
-        type: string
-      email:
         type: string
       id:
         type: string
       name:
         type: string
-      owner:
-        $ref: '#/definitions/common.SimpleUser'
-      owner_id:
+      seats:
         type: integer
-      phone_number:
-        type: string
       status:
         type: integer
       updated_at:
@@ -140,6 +130,55 @@ definitions:
       type:
         type: string
       website:
+        type: string
+      year:
+        type: integer
+    type: object
+  common.Show:
+    properties:
+      auditorium:
+        $ref: '#/definitions/common.Auditorium'
+      date:
+        type: string
+      endTime:
+        type: string
+      id:
+        type: integer
+      imdbID:
+        type: string
+      movie:
+        $ref: '#/definitions/common.SimpleMovie'
+      startTime:
+        type: string
+    type: object
+  common.SimpleCinema:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      status:
+        type: integer
+      updated_at:
+        type: string
+    type: object
+  common.SimpleMovie:
+    properties:
+      imdbID:
+        type: string
+      imdbRating:
+        type: number
+      originalTitle:
+        type: string
+      plot:
+        type: string
+      poster:
+        type: string
+      runtime:
+        type: integer
+      title:
         type: string
       year:
         type: integer
@@ -262,10 +301,25 @@ definitions:
     type: object
   showmodel.Show:
     properties:
+      auditorium:
+        $ref: '#/definitions/common.Auditorium'
+      date:
+        type: string
+      endTime:
+        type: string
+      id:
+        type: integer
+      imdbID:
+        type: string
+      movie:
+        $ref: '#/definitions/common.SimpleMovie'
+      startTime:
+        type: string
+    type: object
+  showmodel.ShowCreate:
+    properties:
       auditoriumID:
         type: string
-      cinema:
-        $ref: '#/definitions/common.Cinema'
       date:
         type: string
       endTime:
@@ -283,6 +337,8 @@ definitions:
         type: string
       seat_number:
         type: integer
+      show:
+        $ref: '#/definitions/common.Show'
       show_id:
         type: integer
       status:
@@ -291,8 +347,6 @@ definitions:
         type: string
       updated_at:
         type: string
-      user:
-        $ref: '#/definitions/common.SimpleUser'
     type: object
   ticketmodel.TicketUpdate:
     properties:
@@ -349,6 +403,17 @@ definitions:
       password:
         type: string
     type: object
+  usermodel.UserUpdate:
+    properties:
+      date_of_birth:
+        type: string
+      gender:
+        type: string
+      name:
+        type: string
+      phone:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -380,6 +445,33 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Create an auditorium
+      tags:
+      - auditoriums
+  /auditoriums/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Returns a single auditorium
+      operationId: get-auditorium-by-id
+      parameters:
+      - description: Auditorium ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.successRes'
+            - properties:
+                data:
+                  $ref: '#/definitions/auditoriummodel.Auditorium'
+              type: object
+      summary: Get a auditorium by its ID
       tags:
       - auditoriums
   /cinemas:
@@ -786,6 +878,34 @@ paths:
       summary: Get profile
       tags:
       - users
+    put:
+      consumes:
+      - application/json
+      description: Update user profile
+      parameters:
+      - description: User data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/usermodel.UserUpdate'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.successRes'
+            - properties:
+                data:
+                  type: boolean
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Update user profile
+      tags:
+      - users
   /register:
     post:
       consumes:
@@ -821,13 +941,17 @@ paths:
       description: List shows
       operationId: list-shows
       parameters:
-      - description: Movie ID
+      - description: IMDB ID
         in: query
         name: imdbID
         type: string
       - description: Date
         in: query
         name: date
+        type: string
+      - description: Start time
+        in: query
+        name: startTime
         type: string
       produces:
       - application/json
@@ -857,7 +981,7 @@ paths:
         name: show
         required: true
         schema:
-          $ref: '#/definitions/showmodel.Show'
+          $ref: '#/definitions/showmodel.ShowCreate'
       produces:
       - application/json
       responses:
