# backend-go/module/show/model/filter.go
@@ -5,7 +5,7 @@ import (
 )
 
 type Filter struct {
-	Date *common.Date `json:"date" form:"date"`
-	//StartTime *common.Time `json:"startTime" form:"startTime"`
-	ImdbID string `json:"imdbID" form:"imdbID"`
+	Date      *common.Date `json:"date" form:"date"`
+	StartTime *common.Time `json:"startTime" form:"startTime"`
+	ImdbID    string       `json:"imdbID" form:"imdbID"`
 }
