# backend-go/module/ticket/model/ticket.go
@@ -11,20 +11,19 @@ const TableName = "tickets"
 
 type Ticket struct {
 	common.SQLModel `json:",inline"`
-	SeatNumber      int                `gorm:"column:seat_number" json:"seat_number"`
-	Timestamp       time.Time          `gorm:"column:timestamp" json:"timestamp"`
-	ShowID          int64              `gorm:"column:show_id" json:"show_id"`
-	Show            *common.Show       `gorm:"preload:false;foreignKey:ShowID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;" json:"show,omitempty"`
-	UserID          int64              `gorm:"column:user_id" json:"-"`
-	User            *common.SimpleUser `gorm:"preload:false;foreignKey:UserID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;" json:"user,omitempty"`
+	SeatNumber      int          `gorm:"column:seat_number" json:"seat_number"`
+	Timestamp       time.Time    `gorm:"column:timestamp" json:"timestamp"`
+	ShowID          int64        `gorm:"column:show_id" json:"show_id"`
+	Show            *common.Show `gorm:"preload:false;foreignKey:ShowID;references:ID;constraint:OnUpdate:CASCADE,OnDelete:SET NULL;" json:"show,omitempty"`
+	UserID          int64        `gorm:"column:user_id" json:"-"`
 }
 
 func (Ticket) TableName() string { return TableName }
 
 func (t *Ticket) Mask(isAdminOrOwner bool) {
-	if user := t.User; user != nil {
-		user.Mask(isAdminOrOwner)
-	}
+	//if user := t.User; user != nil {
+	//	user.Mask(isAdminOrOwner)
+	//}
 }
 
 type TicketCreate struct {
